# icarus_rover_rc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  CMakeLists_ALLFILES.txt  CMakeLists_MESSAGES.txt  LICENSE  README.md  dump.yaml  package.xml  package.xml~
bagfiles/: 2015-05-11-22-28-22.bag
gene_files/: GeneList.txt  GeneList_1.txt  GeneList_10.txt  GeneList_11.txt  GeneList_12.txt  GeneList_13.txt  GeneList_14.txt  GeneList_15.txt  GeneList_16.txt  GeneList_17.txt  GeneList_18.txt  GeneList_19.txt  GeneList_2.txt  GeneList_20.txt  GeneList_21.txt  GeneList_22.txt  GeneList_23.txt  GeneList_24.txt  GeneList_25.txt  GeneList_26.txt  GeneList_27.txt  GeneList_28.txt  GeneList_29.txt  GeneList_3.txt  GeneList_30.txt  GeneList_4.txt  GeneList_5.txt  GeneList_6.txt  GeneList_7.txt  GeneList_8.txt  GeneList_9.txt
include/icarus_rover_rc/: Definitions.h  Evolution.h  Mapping_Node.h  RoboPi_analogRead.c  RoboPi_analogWrite.c  RoboPi_digitalRead.c  RoboPi_digitalWrite.c  RoboPi_readDistance.c  RoboPi_reset.c  RoboPi_servoWrite.c  SonarModel_Angle.csv  SonarModel_Distance.csv  analogRead  analogWrite  build.sh  conversions.h  digitalRead  hello_world.h  readDistance  servoWrite
launch/: Launch_AutoRover.launch  Launch_Diagnostic_Node.launch  Launch_Evolution_Node.launch  Launch_HybridRover.launch  Launch_KeyJoy.launch  Launch_ManualRover.launch  Launch_Mapping_Node.launch  Launch_Mapping_Node_backup.launch  Launch_Motion_Controller_Node.launch  Launch_NoSensorsRover.launch  Launch_Pose_Node.launch  Launch_Rover.launch  Launch_SimMapping.launch  Launch_SimRover.launch  Launch_Sonic_Controller_Node.launch  Launch_Targeting_Node.launch  Launch_UserControl.launch  Mapping_Node.cpp  Sites.txt  acquire_train_images.launch  acquire_train_images.launch~  launch_tf_broadcaster.launch  pick_targets_from_train_images.launch  pick_targets_from_train_images.launch~  run_targeting.launch  tune_targeting.launch  tune_targeting.launch~  usbCameraLaunch.launch~
launch/archive/: acquire_train_images.launch
msg/: GPS_State.msg  ICARUS_Diagnostic.msg  ICARUS_GeneList.msg  ICARUS_Probe_Command.msg  ICARUS_Probe_Status.msg  ICARUS_Target_Status.msg  RC.msg
result_files/: 20Jan2015.csv  21Jan2015.csv  9Dec2014_9Dec2014.csv
src/: Definitions.h  Diagnostic_Node.cpp  Evolution.cpp  Evolution_Node.cpp  KeyJoy_Node.cpp  Learning_Node.cpp  Mapping_Node.cpp  Mapping_Node.cpp.orig  Mapping_Node_BACKUP_7516.cpp  Mapping_Node_BASE_7516.cpp  Mavlink_Node.py  Motion_Controller_Node.cpp  Navigation_Node.cpp  Pose_Node.cpp  Robot_Controller_Node.cpp  Sonic_Controller_Node.cpp  Sonic_Controller_Node.cpp.save  Sonic_Controller_Node.cpp_backup2  Targeting_Node.cpp  Teleop_Node.cpp  acquire_train_images.cpp  acquire_train_images.cpp~  frames.gv  motion_controller.cpp  pick_targets_from_train_images.cpp  pick_targets_from_train_images.cpp~  run_targeting.cpp  tf_broadcaster.cpp  topview_driver.cpp  tune_targeting.cpp  tune_targeting.cpp~
src/archive/: Evolution.cpp  Gene.cpp  Sonic_Controller_Node.cpp_backup  Targeting_Node.cpp  acquire_train_images.cpp  hello_world.cpp  motion_controller.cpp  motion_controller.cpp~HEAD  pick_targets_from_train_images.cpp  run_targeting.cpp  tf_broadcaster.cpp~HEAD  tune_targeting.cpp
target_files/: 12Dec2014.csv  9Dec2014.csv  9Dec2014.csv~  9Dec2014b.csv~
